[package]
name = "WinScript"
version = "2.0.3"
description = ""
authors = ["flick9000"]
license = "GPL V3"
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.4", features = [] }

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.4.1", features = [] }
tauri-plugin-log = "2.3.1"
tauri-plugin-shell = "2.2.1"
tauri-plugin-fs = "2.2.1"
tauri-plugin-os = "2.2.1"
tauri-plugin-dialog = "2.2.1"
tauri-plugin-opener = "2.3.1"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2.7.0"
